--- a/packages/public-client/src/app/components/features/topic-section/topic-section.component.html
+++ b/packages/public-client/src/app/components/features/topic-section/topic-section.component.html
@@ -7,11 +7,17 @@
   [ngClass]="{'menu': sectionName === 'MENU', 'booking': sectionName === 'BOOKINGS', 'reverse': orientation == 'right'}">
   <div class="section-text">    
     <div>
-      <img class="click-icon" src="assets/images/click.svg" />
+      <!-- <img class="click-icon" src="assets/images/click.svg" /> -->
+      <div class="click-icon">
+        <ng-container *ngTemplateOutlet="ClickHandSvg"></ng-container>
+      </div>
       <h2 class="section-label">
-        <span>
+        <a href="javascript:void(0)">{{ sectionTitle }}</a>
+        <!-- <div>{{ sectionTitle }}</div>
+        <div>{{ sectionTitle }}</div> -->
+        <!-- <span>
           {{ sectionTitle }}
-        </span>
+        </span> -->
       </h2>
       <p class="section-blurb">
         {{ sectionNote }}
@@ -130,5 +136,17 @@
     <path id="path76-2"
       d="M1145.5,445.082C1145.67,446.339 1143.38,445.753 1142.95,445.434C1140,443.275 1142.08,438.894 1144.41,437.249C1150.2,433.177 1157.78,437.404 1160.6,442.997C1165.81,453.298 1158.69,465.109 1148.82,469.159C1133.17,475.581 1116.26,464.884 1110.93,449.853C1103.22,428.094 1118.09,405.309 1139.09,398.644C1167.68,389.566 1197.04,409.151 1205.11,436.854C1215.63,472.967 1190.81,509.549 1155.71,519.089C1111.43,531.123 1067.01,500.602 1055.93,457.445C1042.31,404.388 1079,351.528 1130.83,338.847"
       style="fill:none;stroke-width:12.5px;" />
+  </svg>
+</ng-template>
+
+<ng-template #ClickArrowSvg>
+  <svg width="100%" height="100%" viewBox="0 0 255 255" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
+    <path d="M250.935,3.962L145.479,250.777L118.054,136.558L4.12,109.418L250.935,3.962Z" />
+  </svg>
+</ng-template>
+
+<ng-template #ClickHandSvg>
+  <svg width="100%" height="100%" viewBox="0 0 176 249" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
+    <path id="v" d="M31.047,146.252C31.047,146.252 31.024,123.473 31.024,17.89C31.024,-0.025 66.159,-1.039 66.159,18.011L66.159,124.805L66.159,71.862C66.159,56.745 101.731,55.646 101.731,75.087C101.731,79.586 101.748,124.502 101.748,124.502L101.733,83.608C101.733,71.614 137.307,62.214 137.307,91.997C137.307,95.361 137.149,124.466 137.149,124.466C137.149,124.466 137.294,107.842 137.294,100.451C137.294,87.548 172.204,80.033 172.204,106.193C172.204,135.71 172.264,175.722 172.264,175.722C172.264,189.952 163.765,204.337 155.021,215.564L154.998,235.87C154.998,239.239 151.129,243.697 146.353,243.493L56.857,243.999C51.172,243.706 48.24,241.579 47.4,236.764C47.4,231.511 47.542,225.944 47.542,220.53C47.542,215.69 46.497,213.717 44.858,211.565C31.949,195.655 12.97,172.134 6.825,164.374C6.443,163.75 4.44,161.771 4.429,156.811C4.404,146.005 4.32,117.631 4.32,117.631C4.32,89.125 31.032,92.956 31.032,108.137C31.032,108.201 31.047,146.252 31.047,146.252Z" />
   </svg>
 </ng-template>
