--- a/packages/shared/scss/_controls.scss
+++ b/packages/shared/scss/_controls.scss
@@ -3,6 +3,41 @@
 .button {
 }
 
+a {
+  position: relative;
+  text-decoration: none;
+  color: colors.$dive-yellow;
+  $c1: colors.$dive-yellow;
+  $len: 5px;
+  &::after {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 10px;
+    left: 0;
+    bottom: 0;    
+    background-image:
+        radial-gradient(2px circle at 50% 50%, $c1 50%, transparent 50.5%, transparent 8px);
+        //radial-gradient(5px circle, $c1 1.25px, rgba(255,255,255,0) 2.5px),
+        //radial-gradient(5px circle at 2.5px, $c1 1.25px, rgba(255,255,255,0) 2.5px),
+        //radial-gradient(5px circle, $c1 1.25px, rgba(255,255,255,0) 2.5px);
+    background-position: bottom;
+    background-size: 16px 6px;
+    background-repeat: repeat-x;
+
+    transition: background-size 0.21s ease;
+  }
+  &:hover, &:focus {
+    //text-decoration: underline;
+    // background-image:
+    //     radial-gradient(15px 15px ellipse at 0px 0px, $c1 50%, transparent 50.5%);
+    &::after {
+      background-size: 1px 1px;
+    // background-position: bottom;
+    }
+  }
+}
+
 table {
   table-layout: auto;
   border-collapse: collapse;
