--- a/packages/public-client/src/app/components/features/topic-section/topic-section.component.html
+++ b/packages/public-client/src/app/components/features/topic-section/topic-section.component.html
@@ -12,9 +12,8 @@
         <ng-container *ngTemplateOutlet="ClickHandSvg"></ng-container>
       </div>
       <h2 class="section-label">
-        <a href="javascript:void(0)">{{ sectionTitle }}</a>
-        <!-- <div>{{ sectionTitle }}</div>
-        <div>{{ sectionTitle }}</div> -->
+        <!-- <a href="javascript:void(0)">{{ sectionTitle }}</a> -->
+        <div>{{ sectionTitle }}</div>
         <!-- <span>
           {{ sectionTitle }}
         </span> -->
