--- a/packages/public-client/src/app/components/pages/home/home.component.scss
+++ b/packages/public-client/src/app/components/pages/home/home.component.scss
@@ -208,7 +208,7 @@ $verticalGap: 0.75rem;
 
               > div {
                 box-shadow: 1px 1px 4px 0px #000;
-                padding: 6.5vw 1.5rem 1.5rem;
+                padding: 7.5vw 1.5rem 1.5rem;
                 margin-top: -$contactOffset;
                 border-radius: 1rem;
                 transition: box-shadow 0.2s ease;
@@ -225,7 +225,7 @@ $verticalGap: 0.75rem;
                 left: 50%;
                 transform: translateX(-50%);
                 //left: 4.5vw;
-                top: 0rem;
+                top: 0.7vw;
                 width: $imgSize;
                 height: $imgSize;
 
@@ -632,7 +632,7 @@ $verticalGap: 0.75rem;
     display: flex;
     height: $waveSize;
     width: 100%;
-    top: -($waveSize - 0.1vw);
+    top: -($waveSize - 0.15vw);
     background-image: url('/assets/images/wave.svg');
     &.footer {
       height: 2vw;
