topic sections bottom separator, section title styling

--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -98,11 +98,18 @@
   <app-topic-section sectionName="BOOKINGS"></app-topic-section>
   <div class="sections-separator-bottom">
     <div>
-      <!-- <div>
-        <div></div>
-      </div> -->
+      <div></div>
+      <div></div>
+      <div></div>
+      <!-- <div></div> -->
     </div>
-                      <ng-container *ngTemplateOutlet="FiligreeSeparator"></ng-container>
+    <ng-container *ngTemplateOutlet="FiligreeSeparator"></ng-container>
+    <div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <!-- <div></div> -->
+    </div>
   </div>
 </div>
 
