--- a/packages/public-client/src/app/components/pages/home/home.component.scss
+++ b/packages/public-client/src/app/components/pages/home/home.component.scss
@@ -168,7 +168,7 @@ $verticalGap: 0.75rem;
           // align-items: center;
           // justify-content: space-around;
           width: 100%;
-          //height: 20vw;
+          // height: 20vw;
           padding: 2vw 5vw 2vw;
           @include utility.media-breakpoint-gte(md) {
             padding: 4vw 10vw 10vw;            
@@ -207,6 +207,7 @@ $verticalGap: 0.75rem;
               cursor: pointer;
 
               > div {
+                height: 20vw;
                 box-shadow: 1px 1px 4px 0px #000;
                 padding: 7.5vw 1.5rem 1.5rem;
                 margin-top: -$contactOffset;
